objects/Course_Class_Type__c.object
<CustomObject>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orientation</fullName>
                </value>
                <value>
                    <fullName>CPR</fullName>
                </value>
                <value>
                    <fullName>Theory</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Make Up</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>Review Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Template</label>
        <referenceTo>Course_Template__c</referenceTo>
        <relationshipLabel>Course Class Types</relationshipLabel>
        <relationshipName>Course_Class_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Course Class Types</relationshipLabel>
        <relationshipName>Course_Class_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ratio_to_Instructor__c</fullName>
        <inlineHelpText>Number of students that requires 1 instructor.</inlineHelpText>
        <label>Ratio to Instructor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Course Class Type</label>
    <nameField>
        <displayFormat>CCT-{00000}</displayFormat>
        <label>Course Class Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Class Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>